--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,7 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
 
 @import "./scss/reset";
 @import "./layout/container";
 @import "./layout/header";
 @import "./layout/main";
 @import "./layout/footer";
+@import "./components/card";
