--- a/styles/components/_card.scss
+++ b/styles/components/_card.scss
@@ -10,8 +10,12 @@
   flex-direction: column;
   align-items: center;
 
-  &__img {
-    width: 48px;
+  &__symbol {
+    font-family: Inter;
+    font-size: 48px;
+    font-weight: 400;
+    line-height: 48px;
+    margin-bottom: 18px;
   }
   &__title {
     color: #000;
@@ -20,6 +24,7 @@
     font-weight: 700;
     line-height: 28px;
     text-decoration-line: underline;
+    margin-bottom: 12px;
   }
   &__keywords {
     color: #3f444a;
