--- a/styles/layout/_main.scss
+++ b/styles/layout/_main.scss
@@ -1,14 +1,14 @@
 .main {
-  height: calc(100vh - 345px);
   background: #edeef3;
+  margin: 0 auto;
 
-  &__form {
-    margin: 0 auto;
-    max-width: 820px;
-  }
   &__input {
-    border: none;
+    position: relative;
+    left: 50%;
+    transform: translate(-50%);
+    max-width: 820px;
     width: 100%;
+    height: 64px;
     display: inline-block;
     vertical-align: middle;
     padding: 22px 32px;
@@ -16,6 +16,12 @@
     border: 1px solid #ced4da;
     background: #fff;
     margin-top: -32px;
+
+    color: #abb5be;
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 21px;
   }
 
   .card_wr {
