--- a/styles/style.css
+++ b/styles/style.css
@@ -140,16 +140,16 @@ textarea:not([rows]) {
 }
 
 .main {
-  height: calc(100vh - 345px);
   background: #edeef3;
-}
-.main__form {
   margin: 0 auto;
-  max-width: 820px;
 }
 .main__input {
-  border: none;
+  position: relative;
+  left: 50%;
+  transform: translate(-50%);
+  max-width: 820px;
   width: 100%;
+  height: 64px;
   display: inline-block;
   vertical-align: middle;
   padding: 22px 32px;
@@ -157,6 +157,11 @@ textarea:not([rows]) {
   border: 1px solid #ced4da;
   background: #fff;
   margin-top: -32px;
+  color: #abb5be;
+  font-family: Inter;
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 21px;
 }
 .main .card_wr {
   margin: 0 auto;
@@ -200,8 +205,12 @@ textarea:not([rows]) {
   flex-direction: column;
   align-items: center;
 }
-.card__img {
-  width: 48px;
+.card__symbol {
+  font-family: Inter;
+  font-size: 48px;
+  font-weight: 400;
+  line-height: 48px;
+  margin-bottom: 18px;
 }
 .card__title {
   color: #000;
@@ -210,6 +219,7 @@ textarea:not([rows]) {
   font-weight: 700;
   line-height: 28px;
   text-decoration-line: underline;
+  margin-bottom: 12px;
 }
 .card__keywords {
   color: #3f444a;
