"fix: sticky footer"

--- a/styles/style.css
+++ b/styles/style.css
@@ -139,7 +139,15 @@ textarea:not([rows]) {
   line-height: 36px;
 }
 
+body {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  background-color: #edeef3;
+}
+
 .main {
+  flex-grow: 1;
   background: #edeef3;
   margin: 0 auto;
 }
